# caramello-api

./: .env.example  AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20251213-1357-a3db89b6c42d-initial_schema.py  20260104-1044-e667565d64eb-fix_relationships.py  c5711e9bdfb2_initial_schema.py
docs/: dsl_rules.md  language_rules.md  prd-agenda.md  prd_core.md  project_vision.md  quality_rules.md  security_rules.md  style_guide.md
dsl/: manifest.yaml
dsl/entities/: family.yaml  family_invitation.yaml  family_member.yaml  user.yaml
scripts/: generate_code.py  init_db.sql  validate_generation.py
src/caramello/: main.py
src/caramello/core/: config.py
src/caramello/database/: session.py
src/caramello/models/: __init__.py  family.py  familyinvitation.py  familymember.py  user.py
tests/: test_generated_api.py
